--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.2.1",
     "mongodb": "^3.6.2"
   },
   "devDependencies": {
