--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "cross-env DEBUG=app:* nodemon index",
     "start": "cross-env NODE_ENV=production node index",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "cover": "nyc npm run test",
+    "report": "nyc report --reporter=html && start coverage/index.html"
   },
   "keywords": [],
   "author": "cristianiniguez <felizpc1@gmail.com>",
@@ -27,6 +29,7 @@
     "lint-staged": "^10.4.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "prettier": "^2.1.2",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.3",
@@ -39,5 +42,14 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "routes",
+      "services",
+      "lib",
+      "utils"
+    ]
   }
 }
